# hub-vs-spoke

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: writeup_draft.md
results/: hard_summary.csv  summary.csv
scripts/: analyse_results.py  run_benchmark.py
src/hub_vs_spoke/: __init__.py  config.py  types.py
src/hub_vs_spoke/agents/: __init__.py  agent.py  mock_agent.py
src/hub_vs_spoke/evaluation/: __init__.py  cost.py  deterministic.py  judge.py  reliability.py
src/hub_vs_spoke/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/hub_vs_spoke/tasks/: __init__.py  base.py  coding.py  creative.py  reasoning.py  research.py  synthesis.py  tool_use.py
src/hub_vs_spoke/topologies/: __init__.py  _shared.py  base.py  futarchy.py  hub_spoke.py  market.py  solo.py  spoke_spoke.py
tests/: conftest.py
tests/integration/: conftest.py  test_budget_fairness.py  test_error_injection.py  test_hub_vs_spoke_comparison.py
tests/unit/: test_agent.py  test_evaluation.py  test_hub_spoke_topology.py  test_market_topology.py  test_solo_topology.py  test_spoke_spoke_topology.py  test_tasks.py
