[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hub-vs-spoke"
version = "0.1.0"
description = "Test harness comparing hub-and-spoke vs spoke-and-spoke LLM agent topologies"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "agent-economy @ git+https://github.com/strangeloopcanon/agent-economy.git@30f0b42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that make real API calls (deselect with '-m \"not live\"')",
    "unit: marks fast unit tests with no network",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["hub_vs_spoke"]

[tool.coverage.report]
fail_under = 80
show_missing = true
